Fix for spacing between hidden input and label
Relates to MT-168

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -36,6 +36,7 @@ fieldset {
   }
 }
 
+.button + .form-label,
 .form-field + .form-label,
 .form-field + button,
 fieldset + .form-label {
